samples/_failures_safe/1761426482_e90003_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_56009b02.c: In function ‘main’:
./samples/SAFE/__tmp_56009b02.c:164:5: error: expected declaration or statement at end of input
  164 |     }
      |     ^
